[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evodiff"
version = "1.1.0"
description = "Python package for generation of protein sequences and evolutionary alignments via discrete diffusion models"
readme = "README.md"
requires-python = ">=3.8.5"
